--- a/DesafioMuralis/pom.xml
+++ b/DesafioMuralis/pom.xml
@@ -76,6 +76,11 @@
         	<groupId>io.micrometer</groupId>
         	<artifactId>micrometer-core</artifactId>
     	</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
