Adiciona o Swagger para documentação

--- a/DesafioMuralis/src/main/resources/application.properties
+++ b/DesafioMuralis/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=apppass
 server.port=8080
 spring.profiles.active=dev
 spring.jpa.hibernate.ddl-auto=create-drop
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/docs-swagger
